# AVSample

./: .gitignore  README.md  build.gradle  config.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_weather.xml
app/src/main/res/values/: attr.xml  strings.xml
build_static_lib/ffmpeg/arm64-v8a/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswscale.pc
build_static_lib/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libswresample.pc
build_static_lib/libfdk-aac/arm64-v8a/lib/: libfdk-aac.la  libfdk-aac.so.1
build_static_lib/libfdk-aac/arm64-v8a/lib/pkgconfig/: fdk-aac.pc
build_static_lib/libfdk-aac/armeabi-v7a/lib/: libfdk-aac.la
build_static_lib/libfdk-aac/armeabi-v7a/lib/pkgconfig/: fdk-aac.pc
build_static_lib/liblame/arm64-v8a/lib/: libmp3lame.la
build_static_lib/liblame/armeabi-v7a/lib/: libmp3lame.la
build_static_lib/librtmp/arm64-v8a/lib/pkgconfig/: librtmp.pc
build_static_lib/librtmp/arm64-v8a/sbin/: rtmpgw  rtmpsrv  rtmpsuck
build_static_lib/librtmp/armeabi-v7a/lib/pkgconfig/: librtmp.pc
build_static_lib/librtmp/armeabi-v7a/sbin/: rtmpgw  rtmpsrv  rtmpsuck
build_static_lib/libx264/arm64-v8a/lib/pkgconfig/: x264.pc
build_static_lib/libx264/armeabi-v7a/include/: x264_config.h
build_static_lib/libx264/armeabi-v7a/lib/pkgconfig/: x264.pc
camera_recorder/: build.gradle
camera_recorder/src/main/: AndroidManifest.xml
camera_recorder/src/main/cpp/: AVData.cpp  AVData.h  AVPacketPool.cpp  AVPacketPool.h  CMakeLists.txt  FFmpegMuxer.cpp  FFmpegMuxer.h  audio_packet_queue.cpp  audio_packet_queue.h  h264_util.h  logger.h  mp4_muxer.cpp  mp4_muxer.h  native_muxer.cpp  recording_h264_publisher.cpp  recording_h264_publisher.h  recording_publisher.cpp  recording_publisher.h  video_packet_queue.cpp  video_packet_queue.h
camera_recorder/src/main/res/layout/: activity_bitmap.xml  activity_bitmap_gen_mp4.xml  activity_camera.xml  activity_share_texture_id.xml  activity_video_recording.xml
camera_recorder/src/main/res/raw/: vertex_shader_matrix.glsl
camera_recorder/src/main/res/xml/: gl_sample.xml
camerapreview/src/main/: AndroidManifest.xml
camerapreview/src/main/res/layout/: activity_bitmap.xml  activity_camera.xml  activity_share_texture_id.xml  activity_video_recording.xml
camerapreview/src/main/res/raw/: fragment_shader.glsl  fragment_shader1.glsl  fragment_shader2.glsl  fragment_shader3.glsl  fragment_shader_camera.glsl  vertex_shader.glsl
camerapreview/src/main/res/values/: strings.xml
camerapreview/src/main/res/xml/: gl_sample.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
fdkaac_audio_encode_decode/: build.gradle
fdkaac_audio_encode_decode/src/main/: AndroidManifest.xml
fdkaac_audio_encode_decode/src/main/cpp/: CMakeLists.txt  common.h  native-fdkaac.cpp
fdkaac_audio_encode_decode/src/main/cpp/decode/: AACDecoder.cpp  AACDecoder.h
fdkaac_audio_encode_decode/src/main/cpp/encode/: AACEncoder.cpp  AACEncoder.h  put_bits.h
ffmpeg_audio_encode_decode/: build.gradle
ffmpeg_audio_encode_decode/src/main/: AndroidManifest.xml
ffmpeg_audio_encode_decode/src/main/cpp/: CMakeLists.txt  native_ffmpeg_audio.cpp
ffmpeg_audio_encode_decode/src/main/cpp/decode/: AudioDecoder.cpp  AudioDecoder.h
ffmpeg_audio_encode_decode/src/main/cpp/encode/: AudioEncoder.cpp  AudioEncoder.h
ffmpeg_muxer/: build.gradle
ffmpeg_muxer/src/main/: AndroidManifest.xml
ffmpeg_muxer/src/main/cpp/: CMakeLists.txt  FFmpegH264_AAC_MP4_Muxer.cpp  FFmpegH264_AAC_MP4_Muxer.h  FFmpegMuxer.cpp  FFmpegMuxer.h  native_muxer.cpp
ffmpeg_video_encode_decode/: build.gradle
ffmpeg_video_encode_decode/src/main/: AndroidManifest.xml
ffmpeg_video_encode_decode/src/main/cpp/: CMakeLists.txt  common.h
file/: fdkaac_decode.pcm  fdkaac_encode.aac
gradle/wrapper/: gradle-wrapper.properties
javaavplayer/: build.gradle
javaavplayer/src/main/: AndroidManifest.xml
lame_audio_encode_decode/: build.gradle
lame_audio_encode_decode/src/main/: AndroidManifest.xml
lame_ffmpeg_mp3_encode_decode/: build.gradle
lame_ffmpeg_mp3_encode_decode/src/main/: AndroidManifest.xml
lame_ffmpeg_mp3_encode_decode/src/main/cpp/: CMakeLists.txt
lame_ffmpeg_mp3_encode_decode/src/main/cpp/decode/: Mp3Decoder.cpp  Mp3Decoder.h
lame_ffmpeg_mp3_encode_decode/src/main/cpp/encode/: LameEncoder.cpp  LameEncoder.h
lame_ffmpeg_mp3_encode_decode/src/main/cpp/jni/: ffmpeg_mp3_native_api.cpp
mediacodec_audio_encode_decode/: build.gradle
mediacodec_audio_encode_decode/src/main/: AndroidManifest.xml
mediacodec_audio_encode_decode/src/main/cpp/: CMakeLists.txt  native-jni.cpp
mediacodec_video_encode_decode/src/main/: AndroidManifest.xml
nativeavplayer/: build.gradle
nativeavplayer/src/main/: AndroidManifest.xml
nativeavplayer/src/main/cpp/: AVData.cpp  AVData.h  CMakeLists.txt  common.h
nativeavplayer/src/main/cpp/gles/: AVShader.cpp  AVShader.h  GLESPlayer.cpp  GLESPlayer.h  IEGL.cpp  IEGL.h  ITexture.cpp  ITexture.h  IVideoPlayer.cpp  IVideoPlayer.h  KAVEGL.cpp  KAVEGL.h  KAVTxture.cpp  KAVTxture.h  KAV_GL_VideoPlayer.cpp  KAV_GL_VideoPlayer.h
nativeavplayer/src/main/cpp/jni/: native_player.cpp
nativeavplayer/src/main/cpp/sles/: SLESPlayer.cpp  SLESPlayer.h
shell/: build_fdkaac.sh  build_ffmpeg_with_x264_fdkaac_lame.sh  build_ffmpeg_with_x264_fdkaac_lame_all.sh  build_lame.sh  build_lame_all.sh  build_rtmp.sh  build_rtmp_all.sh  build_x264.sh  config.sh
x264_video_encode/: build.gradle
x264_video_encode/src/main/: AndroidManifest.xml
x264_video_encode/src/main/cpp/: CMakeLists.txt  native-x264-encode.cpp  x264Common.h
x264_video_encode/src/main/cpp/encode/: X264Encoder.cpp  X264Encoder.h
x264_video_encode_decode/: build.gradle
x264_video_encode_decode/src/main/: AndroidManifest.xml
x264_video_encode_decode/src/main/cpp/: CMakeLists.txt  native-x264-decode.cpp  native-x264-encode.cpp
yuv_convert/: build.gradle
yuv_convert/src/main/: AndroidManifest.xml
(+253 files in other folders)
